--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -1,25 +1,95 @@
-- title: Documentation
-  url: docs
+# Navigation menu in the sidebar
+- title: "Home"
+  external_url: "https://communitypowerea.com/"
+- title: "How it works"
+  url: "how-it-works"
+- title: "Quick start guide"
+  url: "quick-start-guide"
+- title: "Backtesting and optimization"
+  url: "backtesting-and-optimization"
+- title: "Parameters"
+  url: "docs"
   links:
-    - title: "Getting Started"
-      url: "docs/getting-started"
-      children:
-        - title: Features
-          url: "docs/getting-started#getting-started"
-        - title: Development
-          url: "docs/getting-started#development"
-        - title: Customization
-          url: "docs/getting-started#customization"
-    - title: Versioning
-      url: "docs/versioning"
-    - title: "About"
-      url: "about"
+    - title: "Main parameters"
+      url: "docs/main-parameters"
+    - title: "Lot"
+      url: "docs/lot"
+    - title: "Hedge"
+      url: "docs/hedge"
+    - title: "Risk per currency"
+      url: "docs/risk-per-currency"
+    - title: "Global Account properties"
+      url: "docs/global-account-properties"
+    - title: "Period Limits"
+      url: "docs/period-limits"
+    - title: "Volatility"
+      url: "docs/volatility"
+    - title: "Active Periods"
+      url: "docs/active-periods"
+    - title: "Pending Entry"
+      url: "docs/pending-entry"
+    - title: "Follow up"
+      url: "docs/follow-up"
+    - title: "Martingale"
+      url: "docs/martingale"
+    - title: "Anti-Martingale"
+      url: "docs/anti-martingale"
+    - title: "Partial close"
+      url: "docs/partial-close"
+    - title: "Entry strategy"
+      url: "docs/entry-strategy"
+    - title: "Signals and Filters"
+      url: "docs/signals-and-filters"
+      links:
+        - title: "Directional change"
+          url: "docs/signals-and-filters#directional-change"
+        - title: "Big candle"
+          url: "docs/signals-and-filters#big-candle"
+        - title: "Oscillators"
+          url: "docs/signals-and-filters#oscillators"
+        - title: "IdentifyTrend"
+          url: "docs/signals-and-filters#identifytrend"
+        - title: "TDI"
+          url: "docs/signals-and-filters#tdi"
+        - title: "MACD"
+          url: "docs/signals-and-filters#macd"
+        - title: "ADX"
+          url: "docs/signals-and-filters#adx"
+        - title: "DTrend"
+          url: "docs/signals-and-filters#dtrend"
+        - title: "Parabolic SAR"
+          url: "docs/signals-and-filters#parabolic-sar"
+        - title: "MA Filters"
+          url: "docs/signals-and-filters#ma-filters"
+        - title: "ZigZag"
+          url: "docs/signals-and-filters#zigzag"
+        - title: "Fibo"
+          url: "docs/signals-and-filters#fibo"
+        - title: "Custom Indicators"
+          url: "docs/signals-and-filters#custom-indicators"
+        - title: "Spread"
+          url: "docs/signals-and-filters#spread"
+    - title: "Time"
+      url: "docs/time"
     - title: "News"
-      url: "news"
-- title: "Extras"
-  url: "docs/extras"
-  links:
-    - title: Quizzes
-      url: "docs/extras/example-quiz"
-    - title: Tags Page
-      url: "tags"
+      url: "docs/news"
+    - title: "GUI"
+      url: "docs/gui"
+      links:
+      - title: "Expert panel"
+        url: "docs/gui#expert-panel"
+      - title: "Lines"
+        url: "docs/gui#lines"
+      - title: "Orders on chart"
+        url: "docs/gui#orders-on-chart"
+    - title: "Notifications"
+      url: "docs/notifications"
+    - title: "Backtesting and optimization"
+      url: "docs/backtesting-and-optimization"
+    - title: "Connection to Binance"
+      url: "docs/binance"
+- title: "Brokers"
+  url: "brokers"
+- title: "VPS"
+  url: "vps"
+
