--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -88,6 +88,8 @@
       url: "docs/backtesting-and-optimization"
     - title: "Connection to Binance"
       url: "docs/binance"
+    - title: "Versions history"
+      url: "docs/versions-history"
 - title: "Brokers"
   url: "brokers"
 - title: "VPS"
