--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ accentColor: red # purple, green, etc.
 themeColor: red # purple, green, blue, orange, purple, grey
 fixedNav: 'false' # true or false
 
-permalink: /:title/
+permalink: /:year/:title/
 exclude: [_site, CHANGELOG.md, LICENSE, README.md, vendor]
 
 # Collections
