--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ feedback: false
 google-analytics: G-ZKBYQNPTE1
 # Image and (square) dimension for logo (don't start with /)
 # If commented, will use material hat theme
-#logo: "assets/img/logo.png"
+logo: "assets/img/Community Power_logo_1-no_bg.png"
 logo_pixels: 32
 color: "#403f4c" # primary color for header, buttons
 
