--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -10,15 +10,21 @@
 - title: "Documentation"
   url: "docs"
   links:
+    - title: "Versions history"
+      url: "docs/versions-history"
+    - title: "Multi-symbol"
+      url: "docs/multi-symbol"
     - title: "Main parameters"
       url: "docs/main-parameters"
+    - title: "Entry strategy"
+      url: "docs/entry-strategy"
     - title: "Lot"
       url: "docs/lot"
     - title: "Hedge"
       url: "docs/hedge"
     - title: "Risk per currency"
       url: "docs/risk-per-currency"
-    - title: "Global Account properties"
+    - title: "Global Account Close"
       url: "docs/global-account-properties"
     - title: "Period Limits"
       url: "docs/period-limits"
@@ -38,58 +44,18 @@
       url: "docs/partial-close"
     - title: "Individual follow-up"
       url: "docs/individual-follow-up"
-    - title: "Entry strategy"
-      url: "docs/entry-strategy"
     - title: "Signals and Filters"
       url: "docs/signals-and-filters"
-      links:
-        - title: "Directional change"
-          url: "docs/signals-and-filters#directional-change"
-        - title: "Big candle"
-          url: "docs/signals-and-filters#big-candle"
-        - title: "Oscillators"
-          url: "docs/signals-and-filters#oscillators"
-        - title: "IdentifyTrend"
-          url: "docs/signals-and-filters#identifytrend"
-        - title: "TDI"
-          url: "docs/signals-and-filters#tdi"
-        - title: "MACD"
-          url: "docs/signals-and-filters#macd"
-        - title: "ADX"
-          url: "docs/signals-and-filters#adx"
-        - title: "DTrend"
-          url: "docs/signals-and-filters#dtrend"
-        - title: "Parabolic SAR"
-          url: "docs/signals-and-filters#parabolic-sar"
-        - title: "MA Filters"
-          url: "docs/signals-and-filters#ma-filters"
-        - title: "ZigZag"
-          url: "docs/signals-and-filters#zigzag"
-        - title: "Fibo"
-          url: "docs/signals-and-filters#fibo"
-        - title: "Custom Indicators"
-          url: "docs/signals-and-filters#custom-indicators"
-        - title: "Spread"
-          url: "docs/signals-and-filters#spread"
     - title: "Time"
       url: "docs/time"
     - title: "News"
       url: "docs/news"
     - title: "GUI"
       url: "docs/gui"
-      links:
-      - title: "Expert panel"
-        url: "docs/gui#expert-panel"
-      - title: "Lines"
-        url: "docs/gui#lines"
-      - title: "Orders on chart"
-        url: "docs/gui#orders-on-chart"
     - title: "Notifications"
       url: "docs/notifications"
     - title: "Backtesting and optimization"
       url: "docs/backtesting-and-optimization"
-    - title: "Versions history"
-      url: "docs/versions-history"
 - title: "Brokers"
   url: "brokers"
 - title: "VPS"
